--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
+        "laravel-mix-workbox": "^0.1.4",
         "pinia": "^2.0.13",
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
@@ -17,6 +18,7 @@
         "vue": "^3.2.31",
         "vue-loader": "^16.8.3",
         "vue-router": "^4.0.13",
-        "vue-tabler-icons": "^2.3.0"
+        "vue-tabler-icons": "^2.3.0",
+        "workbox-webpack-plugin": "^6.5.2"
     }
 }
