Fix display errors

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=4f0cfff5ad44bbe6904e523913c66022",
+    "/css/app.css": "/css/app.css?id=166fa50fd052d0988f652bca187e5d66"
 }
