Update styling for treats

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=48e4343495c79519132460b018278f08",
+    "/css/app.css": "/css/app.css?id=3426c38a5a3701eef6956e98762d8bc9"
 }
