Start auth screens

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=8ce0e4e95c3b9b2e23d026a46f3a6071",
-    "/css/app.css": "/css/app.css?id=8ef89f9495b7d518f0efa6cbba8c9df1"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
