--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=d49f755b4eab3f8f1e4ec6d00b56ed5a",
+    "/css/app.css": "/css/app.css?id=541e806f413f29d5baeaa5c3f7f8312b"
 }
