--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=d49f755b4eab3f8f1e4ec6d00b56ed5a",
-    "/css/app.css": "/css/app.css?id=3a53a0a0fc6f14ab7bddf1d858633582"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
