Add sort option

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=0e5c2edf72f508b2992fa77a97680886",
-    "/css/app.css": "/css/app.css?id=620761b4047d6ba45831124ff81167ee"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
