--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c5bf7884e0248b111eff08e4ef7de610",
+    "/css/app.css": "/css/app.css?id=878f73eb8b30cc64ddd882f6745e63d3"
 }
