--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "mix",
-        "watch": "mix watch",
-        "prod": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.14",
-        "axios": "^1.3.4",
-        "laravel-mix": "^6.0.49",
-        "laravel-mix-workbox": "^0.1.4",
-        "pinia": "^2.0.33",
-        "postcss": "^8.4.21",
+        "@vitejs/plugin-vue": "^4.4.0",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.6.0",
+        "laravel-vite-plugin": "^0.8.1",
+        "pinia": "^2.1.7",
+        "postcss": "^8.4.31",
         "postcss-import": "^15.1.0",
-        "tailwindcss": "^3.2.7",
-        "vue": "^3.2.47",
-        "vue-loader": "^17.0.1",
-        "vue-router": "^4.1.6",
-        "vue-tabler-icons": "^2.20.0",
-        "workbox-webpack-plugin": "^6.5.4"
+        "tailwindcss": "^3.3.5",
+        "vite": "^4.5.0",
+        "vue": "^3.3.8",
+        "vue-loader": "^17.3.1",
+        "vue-router": "^4.2.5",
+        "vue-tabler-icons": "^2.21.0"
     }
 }
