--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,14 @@
         "php": "^8.3",
         "ext-intl": "*",
         "ext-pdo_mysql": "*",
-        "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/sanctum": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.0",
         "laravel/sail": "^1.26",
+        "laravel/tinker": "^2.10",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^11.0",
