--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "laravel/laravel",
+    "name": "fruppel/deeds-and-treats",
     "type": "project",
     "description": "",
     "keywords": ["framework", "laravel"],
-    "license": "MIT",
+    "license": "proprietary",
     "require": {
         "php": "^8.3",
         "ext-intl": "*",
@@ -13,13 +13,10 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "laravel/breeze": "^2.0",
         "laravel/sail": "^1.26",
         "laravel/tinker": "^2.10",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0",
-        "spatie/laravel-ignition": "^2.0"
+        "nunomaduro/collision": "^8.8",
+        "phpunit/phpunit": "^11.0"
     },
     "autoload": {
         "psr-4": {
