--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/vite": "^4.1.4",
         "@vitejs/plugin-vue": "^5.2.3",
         "autoprefixer": "^10.4.20",
         "axios": "^1.8.4",
@@ -13,7 +14,7 @@
         "pinia": "^2.3.0",
         "postcss": "^8.4.49",
         "postcss-import": "^15.1.0",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.4",
         "vite": "^6.3.2",
         "vue": "^3.5.13",
         "vue-loader": "^17.4.2",
