--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fakerphp/faker": "^1.23",
         "laravel/sail": "^1.26",
         "laravel/tinker": "^2.10",
+        "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.8",
         "phpunit/phpunit": "^11.0"
     },
