--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "deploy": [
+            "composer install --no-dev",
+            "npm ci && npm run build && rm -rf node_modules"
         ]
     },
     "extra": {
