--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,7 +6,7 @@ WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm ci
 COPY resources/ resources/
-COPY vite.config.js tailwind.config.js postcss.config.js ./
+COPY vite.config.js tailwind.config.js ./
 RUN npm run build
 
 ########## Stage 2: Composer (Dependencies)
