--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -11,34 +11,37 @@ RUN npm run build
 
 ########## Stage 2: Runtime (PHP-FPM 8.3) + Composer
 FROM php:8.3-fpm-bookworm AS app
-# Systempakete & PHP-Extensions
+
+# Systempakete & PHP-Extensions (inkl. ein paar häufig gebrauchte)
 RUN apt-get update && apt-get install -y \
       git unzip \
       libicu-dev libpng-dev libjpeg-dev libzip-dev libonig-dev \
   && docker-php-ext-configure gd --with-jpeg \
-  && docker-php-ext-install -j"$(nproc)" pdo_mysql intl gd zip mbstring opcache \
+  && docker-php-ext-install -j"$(nproc)" pdo_mysql intl gd zip mbstring opcache bcmath exif \
   && rm -rf /var/lib/apt/lists/*
 
-# Composer ins Runtime-Image kopieren
+# Composer in die Runtime
 COPY --from=composer:2 /usr/bin/composer /usr/local/bin/composer
 ENV COMPOSER_ALLOW_SUPERUSER=1 COMPOSER_HOME=/composer
 ENV APP_ENV=production APP_DEBUG=0
 
 WORKDIR /app
 
-# 1) Composer-Caching: erst nur die Composer-Dateien
+# 1) Composer-Caching: nur Composer-Dateien
 COPY composer.json composer.lock ./
+# WICHTIG: keine Scripts im Build, die laufen erst auf dem Server
 RUN composer install \
-      --no-dev --prefer-dist --no-interaction --no-progress --optimize-autoloader
+      --no-dev --prefer-dist --no-interaction --no-progress \
+      --optimize-autoloader --no-scripts
 
-# 2) Dann den restlichen Code kopieren
+# 2) Danach erst den Rest des Codes
 COPY . .
 
 # 3) Gebaute Frontend-Assets übernehmen
 COPY --from=assets /app/public/build /app/public/build
 
-# 4) Autoloader final optimieren & Laufzeitverzeichnisse anlegen
-RUN composer dump-autoload --optimize --no-dev \
+# 4) Autoloader final optimieren, Laufzeitpfade vorbereiten
+RUN composer dump-autoload --optimize --no-dev --no-interaction \
  && mkdir -p storage bootstrap/cache \
  && chown -R www-data:www-data storage bootstrap/cache
 
