--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,3 +53,19 @@ jobs:
           platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  deploy:
+    needs: docker
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - name: SSH & deploy
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}      # z.B. vserver.fruppel.de
+          username: ${{ secrets.SERVER_USER }}  # z.B. dein Linux-User mit sudo
+          key: ${{ secrets.SERVER_SSH_KEY }}    # private SSH key (PEM)
+          port: ${{ secrets.SERVER_PORT || 22 }}
+          script: |
+            GHCR_USER=${{ secrets.GHCR_USER }} GHCR_PAT=${{ secrets.GHCR_PAT }} \
+            sudo /usr/local/sbin/deploy-deeds-and-treats.sh main
